# leader-db

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: README.md  prototype-2023.yaml
data/: README.md
data/raw/archigos/: .gitkeep
data/raw/transparency_cpi/: .gitkeep
docs/: README.md  architecture.md  coding-guidelines.md  country-year-chronicle-increment-0.md  country-year-chronicle-increment-1.md  country-year-chronicle-increment-2.md  country-year-chronicle-increment-3.md  country-year-chronicle-workplan.md  data-sources.md  database-schema.md  local-data-store.md  operational-hygiene.md  ranking-evaluation-criteria.md  requirements-core.md  source-attributions.md  source-ingestion-plan.md  source-vetting-plan.md  source-vetting-report.md  source-vetting-worksheet.md  testing-guide-sources.md  testing-guide-viz-cloudflare.md  testing-guide-viz-customer-portal.md  testing-guide-viz-superset.md  top-level-requirements.md  viz-workplan.md  workplan.md
docs/architecture/: database-schema.md  local-data-store.md  overview.md  pts.md  sipri-milex.md  sipri-yearbook-ch7.md  sipri_yearbook_ch7.md  sources.md  ucdp.md  undp-hdi.md  vertical-slice-2023.md  wdi.md  wgi.md
docs/chronicle/: increment-0.md  increment-1.md  increment-2.md  increment-3.md  increment-4.md  increment-5.md  workplan.md
docs/methodology/: ranking-evaluation-criteria.md  ranking-evaluation-questions.docx
docs/process/: coding-guidelines.md  operational-hygiene.md
docs/req/: requirements-core.md  top-level-requirements.md
docs/requirements/: core.md  sources.md
docs/reviews/: README.md
docs/source-vetting/: plan.md  report.md  worksheet.md
docs/sources/: attributions.md  ingestion-plan.md  registry.md  system-explained.md
docs/sources/vetting/: plan.md  report.md  worksheet.md
examples/: README.md
infra/cloudflare/: cloudflared.env.template  config.yml.template  docker-compose.yml
infra/superset/: Dockerfile  docker-compose.yml  superset.env.template  superset_config.py
infra/superset/nginx-conf/: default.conf
infra/superset/reports/: index.html
scripts/: build_static_country_dashboard.py  check_viz_reports.py  init_data_lake.sh  smoke_wikidata_wikipedia.py
src/leaders_db/: __init__.py  cli.py  config.py  env.py  paths.py  version.py
src/leaders_db/chronicle/: __init__.py  _area_source.py  _economy_fields.py  _flags.py  _formatters.py  _maddison_source.py  _provenance.py  _row_area.py  _row_identity.py  _row_regime.py  _row_ruler.py  _row_sipri.py  _ruler_loader.py  _source_orchestration.py  _sun_ruler_loader.py  _wdi_cache_source.py  _wdi_fields.py  _wikidata_recent_rulers.py  condensed_writer.py  constants.py  country_scope.py  csv_writer.py  regime.py  row_builder.py  ruler_resolver.py  runner.py  source_constants.py  sources.py  sqlite_writer.py  system_type.py
src/leaders_db/cli/: __init__.py  _app.py  _helpers.py  commands_chronicle.py  commands_scoring_category.py  commands_scoring_other.py  commands_setup.py  commands_stage0_1.py  commands_stage2.py  commands_stage3_5.py  commands_validation.py  commands_vertical_slice.py  commands_viz.py
src/leaders_db/db/: __init__.py  engine.py  models.py  session.py
src/leaders_db/export/: __init__.py  csv_writer.py  markdown_report.py
src/leaders_db/ingest/: __init__.py  archigos.py  archigos_db.py  archigos_db_helpers.py  archigos_dta.py  archigos_io.py  archigos_result.py  bti.py  bti_db.py  bti_db_helpers.py  bti_io.py  bti_xlsx.py  cirights.py  cirights_db.py  cirights_db_helpers.py  cirights_io.py  cirights_xlsx.py  cirights_xlsx_pivot.py  client_matrix.py  external.py  fas.py  fas_db.py  fas_db_helpers.py  fas_html.py  fas_http.py  fas_io.py  fas_result.py  freedom_house.py  interfaces.py  leader_survival.py  maddison_project.py  maddison_project_db.py  maddison_project_db_helpers.py  maddison_project_io.py  maddison_project_xlsx.py  nti.py  pts.py  pts_db.py  pts_db_helpers.py  pts_io.py  (+86 more)
tests/: __init__.py  _domestic_violence_factories.py  _economic_wellbeing_factories.py  _effectiveness_factories.py  _integrity_factories.py  _international_peace_factories.py  _nuclear_factories.py  _political_freedom_factories.py  _resolve_indicators_factories.py  _score_evidence_factories.py  _social_wellbeing_factories.py  conftest.py  test_chronicle_area_source.py  test_chronicle_constants.py  test_chronicle_country_scope_and_condensed.py  test_chronicle_economy_fields.py  test_chronicle_production_wiring.py  test_chronicle_regime.py  test_chronicle_row_builder.py  test_chronicle_ruler_resolver.py  test_chronicle_sqlite.py  test_chronicle_sun_curated.py  test_chronicle_system_type.py  test_chronicle_wdi_cache_source.py  test_chronicle_wikidata_recent_rulers.py  test_cli_chronicle.py  test_cli_score_category_batch.py  test_cli_score_category_batch_attribution.py  test_cli_score_category_batch_errors.py  test_cli_smoke.py  test_cli_viz.py  test_config.py  test_db_schema.py  test_imports.py  test_ingest_archigos.py  test_ingest_bti.py  test_ingest_cirights.py  test_ingest_fas.py  test_ingest_maddison_project.py  test_ingest_pts.py  (+85 more)
tests/fixtures/: README.md
tests/sources/: test_archigos_adapter.py  test_bti_adapter.py  test_cirights_adapter.py  test_concepts.py  test_contracts.py  test_freedom_house_adapter.py  test_import_boundary.py  test_legacy_compatibility.py  test_maddison_project_adapter.py  test_pts_adapter.py  test_pwt_adapter.py  test_query.py  test_query_repository.py  test_registry.py  test_reign_adapter.py  test_rsf_press_freedom_adapter.py  test_runner.py  test_sipri_milex_adapter.py  test_sipri_yearbook_ch7_adapter.py  test_transparency_cpi_adapter.py  test_ucdp_adapter.py  test_undp_hdi_adapter.py  test_vdem_adapter.py  test_who_gho_api_adapter.py  test_world_bank_wdi_adapter.py  test_world_bank_wgi_adapter.py
(+389 files in other folders)
